       dumps are now compressed with gzip

    LM PLC:

    - list_remote returns array instead of dict + controller_id proprety
    - result function in macro api. terminate and result function accept action uuid as a param
    - on_set lm rule (status changed to 1)
    - new LM API and macro functions: clear (set lvar value to 0), toggle (toggles lvar value between 0 and 1)
    - cmd macro function now accepts full controller ids (uc/controller_id) as well as short
    - new macro functions: ls, open_oldest, open_newest

    SFA:

    - list_remote returns array instead of dict + controller_id proprety
    - list_macros contains now controller property
    - append_controller now tries to autodetect controller type if no type specified
    - sfa pvt access logs

    Common:

    - ability to run controllers under restricted user

3.0.1
    Minor release with some urgent features

    Core

    - EVA_ITEM_PARENT_GROUP variable in script ENV which contains the parent group of the item

    - cvars now can be set as global or assigned to the specified item group
        i.e. 'VAR1' - global cvar, available to the all scripts, 'group1/VAR2' - variable available
         only to scripts from group 'group1' (as 'VAR2'), 'group2/VAR2' - variable available only
         to group 'group2' (also as 'VAR2'). Used by UC scripts to let one script manage different items

    Universal Controller

    - 'update_delay' - item passive update may start with a delay to prevent multiple updates
        run simultaneously producing high system load

    UC API and uc-cmd:

    - 'clone' function in UC API and uc-cmd to clone items
    - 'clone_group' function in UC API and uc-cmd for cloning all matching items in a group
    - 'destroy_group' function destroys all items in the specified group

    Logic Manager

    - item id in LM rules match by simple mask (i.e. '*id*' or 'id*' or '*id')

3.0.0
    First public release